@@ -82,6 +82,9 @@ thumbnails.logoTV=false
 # Add a set logo to the thumbnail if the poster is a set master : true or false
 thumbnails.logoSet=true
 
+# Add a subtitle logo to the thumbnail if the video has subtitles
+thumbnails.logoSubTitle=true
+
 # Add a language specific icon (flag) to the thumbnail : true or false
 thumbnails.language=true
 
@@ -119,7 +122,7 @@ thumbnails.perspectiveBottom=3.0
 thumbnails.perspectiveDirection=right
 
 # Turn on/off the rounded corners of the thumbnails
-thumbnails.roundCorners=false
+thumbnails.roundCorners=true
 
 # The radius (size) of the round corners
 thumbnails.cornerRadius=25
@@ -132,6 +135,7 @@ posters.normalize=true
 posters.reflection=true
 posters.logoHD=false
 posters.logoTV=false
+posters.logoSubTitle=false
 posters.language=false
 posters.reflectionHeight=12.5
 posters.reflectionStart=0.0
@@ -142,7 +146,7 @@ posters.perspective=true
 posters.perspectiveTop=3.0
 posters.perspectiveBottom=3.0
 posters.perspectiveDirection=right
-posters.roundCorners=false
+posters.roundCorners=true
 posters.cornerRadius=50
 
 # All of the same properties for the thumbnail rendering can be applied to the Season banners
