@@ -76,6 +76,9 @@ thumbnails.logoTV=false
 # Add a set logo to the thumbnail if the poster is a set master : true or false
 thumbnails.logoSet=true
 
+# Add a subtitle logo to the thumbnail if the video has subtitles
+thumbnails.logoSubTitle=true
+
 # Add a language specific icon (flag) to the thumbnail : true or false
 thumbnails.language=true
 
@@ -85,7 +88,7 @@ thumbnails.reflectionHeight=12.5
 # Reflection gradient starts at this percentage of the reflection height
 thumbnails.reflectionStart=0.0
 
-# Relfection gradient ends at this percentage of the reflection height
+# Reflection gradient ends at this percentage of the reflection height
 thumbnails.reflectionEnd=100.00
 
 # Opacity start value (Default = 30%)
@@ -104,6 +107,12 @@ thumbnails.perspectiveBottom=3.0
 # The direction of the perspective. Valid values are left, right and both.
 thumbnails.perspectiveDirection=right
 
+# Turn on/off the rounded corners of the thumbnails
+thumbnails.roundCorners=true
+
+# The radius (size) of the round corners
+thumbnails.cornerRadius=25
+
 # All of the same properties for the thumbnail rendering can be applied to the detail Poster image
 posters.format=png
 posters.width=200
@@ -112,6 +121,7 @@ posters.normalize=false
 posters.reflection=true
 posters.logoHD=true
 posters.logoTV=false
+posters.logoSubTitle=false
 posters.language=true
 posters.perspective=true
 posters.reflectionHeight=12.5
@@ -122,6 +132,8 @@ posters.opacityEnd=100.0
 posters.perspectiveTop=3.0
 posters.perspectiveBottom=3.0
 posters.perspectiveDirection=right
+posters.roundCorners=true
+posters.cornerRadius=50
 
 # This is the fully qualified name of the plugin class implementing 
 # the thumbnail/poster/background generator for movie posters.
