@@ -71,6 +71,9 @@ thumbnails.logoTV=false
 # Add a set logo to the thumbnail if the poster is a set master : true or false
 thumbnails.logoSet=true
 
+# Add a subtitle logo to the thumbnail if the video has subtitles
+thumbnails.logoSubTitle=true
+
 # Add a language specific icon (flag) to the thumbnail : true or false
 thumbnails.language=true
 
@@ -107,6 +110,12 @@ thumbnails.perspectiveBottom=3.0
 # The direction of the perspective. Valid values are left, right and both.
 thumbnails.perspectiveDirection=left
 
+# Turn on/off the rounded corners of the thumbnails
+thumbnails.roundCorners=true
+
+# The radius (size) of the round corners
+thumbnails.cornerRadius=25
+
 # All of the same properties for the thumbnail rendering can be applied to the detail Poster image
 posters.format=png
 posters.width=400
@@ -125,6 +134,8 @@ posters.perspective=true
 posters.perspectiveTop=3.0
 posters.perspectiveBottom=3.0
 posters.perspectiveDirection=left
+posters.roundCorners=true
+posters.cornerRadius=50
 
 # This is the fully qualified name of the plugin class implementing 
 # the thumbnail/poster/background generator for movie posters.
